# noir_rs_deprecated

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh
.github/workflows/: Dockerfile  build&test@arcrunner.yml  build&test@fedora.yml  build&test@localrunner.yml  build&test@macos.yml  build&test@ubuntu.yml  rust.yml
acir_composer/: Cargo.toml
acir_composer/src/: lib.rs  tests.rs
acvm_runtime/: Cargo.toml
acvm_runtime/src/: circuit.rs  errors.rs  execute.rs  lib.rs  main.rs  tests.rs
barretenberg/: Cargo.toml  build.rs
barretenberg/src/: lib.rs
barretenberg/src/pedersen/: mod.rs
barretenberg/src/srs/: netsrs.rs
blackbox_solver/: Cargo.toml
blackbox_solver/src/: lib.rs  pedersen.rs  scalar_mul.rs  schnorr.rs  traits.rs
examples/poly_check_circuit/: Cargo.toml  Nargo.toml
examples/poly_check_circuit/src/: main.rs
noir_rs/: Cargo.toml
noir_rs/src/: lib.rs
src/: main.rs
src/acir_composer/: mod.rs  test.rs
src/acvm/: mod.rs
src/acvm/blackbox_solver/: mod.rs  pedersen.rs  scalar_mul.rs  schnorr.rs
src/bindings/: mod.rs
src/bindings/acir/: mod.rs
src/bindings/circuit/: circuit_size.rs  test.rs
src/bindings/examples/: mod.rs
src/bindings/pedersen/: mod.rs
src/bindings/schnorr/: mod.rs
src/bindings/srs/: mod.rs  netsrs.rs
