[package]
name = "barretenberg_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "barretenberg"

[dependencies]
link-cplusplus = "1.0.9"
base64 = "0.21.4"
flate2 = "1.0.27"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
acvm = "0.27.0"
num-bigint = "0.4.4"
thiserror = "1.0.49"
blake2 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
p256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }

[dev-dependencies]

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
