[workspace]

members = [
    "acir_composer",
    "acvm_runtime",
    "barretenberg",
    "blackbox_solver",
    "noir_rs",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Bartosz Nowak https://github.com/Okm165"]
description = "A Pure Rust Implementation of the Noir zkSNARK Proving Scheme."
edition = "2021"
license = "Apache"
repository = "https://github.com/visoftsolutions/noir_rs"

[workspace.dependencies]
acir_composer = { path = "acir_composer" }
acvm = { git = "https://github.com/visoftsolutions/acvm.git" }
barretenberg = { path = "barretenberg" }
blackbox_solver = { path = "blackbox_solver" }
acvm_runtime = { path = "acvm_runtime" }
