[package]
name = "acvm_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = { git = "https://github.com/visoftsolutions/acvm.git" }
thiserror = "1.0.49"
serde_json = "1.0.107"
serde = "1.0.189"
base64 = "0.21.4"
flate2 = "1.0.27"