[package]
name = "acvm_runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
acir_composer.workspace = true
acvm.workspace = true
barretenberg.workspace = true
blackbox_solver.workspace = true

base64 = "0.21.4"
bincode = "1.3.3"
flate2 = "1.0.27"
hex = "0.4.3"
serde = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.49"
