[package]
name = "barretenberg"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
flate2 = "1.0.27"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.49"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
