[package]
name = "blackbox_solver"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = { git = "https://github.com/visoftsolutions/acvm.git" }
barretenberg = { path = "../barretenberg" }
blake2 = "0.10.6"
hex = "0.4.3"
k256 = { version = "0.13.1", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
num-bigint = "0.4.4"
p256 = { version = "0.13.2", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = "1.0.49"
