[package]
name = "noir_rs"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
acir_composer.workspace = true
acvm_runtime.workspace = true
barretenberg.workspace = true
blackbox_solver.workspace = true
base64 = "0.21.4"
bincode = "1.3.3"
flate2 = "1.0.27"
hex = "0.4.3"
serde = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.49"